# tksidebar

./: README.md  example.py  setup.cfg  setup.py
src/: __init__.py  sidebare.py  utils.py
src/tksidebar/: sidebar.py
src/tksidebar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tksidebar/: __init__.py  sidebar.py
