[metadata]
name = tksidebar
version = 0.3.0
author = youssef Hoummad
author_email = youssefhoummad@outlook.com
description = a nice sidebar for tkinter app GUI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/youssefhoummad/tk_sidebare
project_urls =
    Bug Tracker = https://github.com/youssefhoummad/tk_sidebare/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

